[package]
name = "github-cache-rs"
version = "0.2.2"
authors = ["Sondre Nilsen <nilsen.sondre@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.14"
envy = "0.4.0"
graphql_client = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9.20"
rocket = "0.4"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
